[package]
name = "tesseract-integration-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for the tesseract relayer"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
anyhow = "1.0.70"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
#subxt = { version = "0.28.0", features = [] }
subxt = { git = "https://github.com/polytope-labs/subxt", branch = "master" }
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
hex = "0.4.3"

ismp = { git = "https://github.com/polytope-labs/ismp-rs", branch = "main" }
ismp-parachain = { git = "https://github.com/polytope-labs/substrate-ismp", branch = "main" }
ismp-demo = { git = "https://github.com/polytope-labs/substrate-ismp", branch = "main" }

sp-io = "22.0.0"
sp-keyring = "23.0.0"

tesseract-parachain = { path = "../parachain", features = ["testing"] }
tesseract-consensus = { path = "../consensus" }
tesseract-message = { path = "../messaging" }
tesseract-primitives = { path = "../primitives" }
